Fixed bio spacing issue

--- a/frontend/src/views/ContactUs/Bio.module.css
+++ b/frontend/src/views/ContactUs/Bio.module.css
@@ -1,14 +1,13 @@
 /* Bio */
 
 .image {
-    width: 10em;
-    height: 10em;
-    border-width: 5px;
-    border-style: solid;
     border-radius: 50%;
+    border-style: solid;
+    border-width: 5px;
+    height: 10em;
+    width: 10em;
 }
 
 .bio {
-    width: 200px;
     margin-bottom: 25px;
 }
